polish: replace Math.max/Math.min clamping with Math.clamp (Java 21)
Java 21 added Math.clamp(value, min, max) which is clearer and less
error-prone than the Math.max(Math.min(...)) idiom. SonarQube flags
the old pattern as a code smell.

Replaced all occurrences in terminal code:
- TerminalBuffer: clearChars, deleteChars, insertChars
- Terminal: setCursorPos, setCursorRow
- DL, IL: line count clamping

Also adds org.sonarqube Gradle plugin (configured on Adwaita).

Assisted by: Aether Silverstone (OpenClaw agent — code generation
and review).