@@ -13,7 +13,7 @@ public class DL extends CSISequenceHandler {
 
         int lines = Math.max(args[0], 1);
         int maxLines = terminal.scrollLast - terminal.y + 1;
-        lines = Math.min(lines, Math.max(0, maxLines));
+        lines = Math.clamp(lines, 0, maxLines);
         if (lines == 0) return;
 
         for (int i = 0; i < lines; i++) {
